@startuml WebScraperERD
title WebScraper Database Schema (TimescaleDB)

hide methods
skinparam classAttributeIconSize 0

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

table("scrape_templates") as Template {
  primary_key(id): uuid
  --
  name: text <<unique>>
  description: text?
  url_pattern: text?
  options: jsonb
  usage_count: integer (default 0)
  created_at: timestamptz
  updated_at: timestamptz
}

table("scrape_jobs") as Job {
  primary_key(id): uuid
  --
  type: varchar(16)
  url: text
  status: varchar(16)
  firecrawl_job_id: varchar(128)?
  foreign_key(template_id): uuid?
  foreign_key(schedule_id): uuid?
  options: jsonb
  results: jsonb?
  error: text?
  primary_key(started_at): timestamptz
  completed_at: timestamptz?
  duration_seconds: integer?
  created_at: timestamptz
  updated_at: timestamptz
}

table("job_schedules") as Schedule {
  primary_key(id): uuid
  --
  name: text
  description: text?
  foreign_key(template_id): uuid?
  url: text
  schedule_type: varchar(16)
  cron_expression: text?
  interval_seconds: integer?
  scheduled_at: timestamptz?
  enabled: boolean (default true)
  last_run_at: timestamptz?
  next_run_at: timestamptz?
  run_count: integer (default 0)
  failure_count: integer (default 0)
  options: jsonb
  created_at: timestamptz
  updated_at: timestamptz
}

table("export_jobs") as ExportJob {
  primary_key(id): uuid
  --
  name: text
  description: text?
  export_type: varchar(16)
  formats: text[]
  filters: jsonb?
  status: varchar(16)
  file_paths: jsonb?
  row_count: integer?
  file_size_bytes: bigint?
  error: text?
  started_at: timestamptz
  completed_at: timestamptz?
  expires_at: timestamptz
  created_at: timestamptz
  updated_at: timestamptz
}

Template "1" -- "0..*" Job : owns >
Template "1" -- "0..*" Schedule : configures >
Schedule "1" ..> "0..*" Job : creates >

note right of Template
  Constraints:
  - name UNIQUE
  Indexes:
  - (name)
end note

note right of Job
  Indexes:
  - (status, started_at DESC)
  - (status, type, started_at DESC)
  - (id)
  - (type)
  - (template_id)
  - (schedule_id)
  - (template_id, created_at DESC) partial
  - url gin_trgm_ops
  - results gin
  Notes:
  - Composite PK (id, started_at) for hypertable compliance
  - Hypertable partitioned by started_at
  - Stores JSONB options & results payloads
end note

note right of Schedule
  Indexes:
  - (enabled, next_run_at)
  - (template_id)
  - (last_run_at DESC)
  Constraints:
  - schedule_type IN ('cron','interval','one-time')
  Notes:
  - Scheduler queries WHERE enabled AND next_run_at <= NOW()
  - Creates scrape_jobs on execution
end note

note right of ExportJob
  Indexes:
  - (status, created_at DESC)
  - (export_type)
  - (expires_at) partial
  Notes:
  - Temporary files stored in WEBSCRAPER_EXPORT_DIR/{id}
  - Cleanup job deletes expired rows & assets
end note

@enduml
